

                              KijiSchema Release Notes

Version 1.3.0
  * SCHEMA-515. Exposes table and data request in HBaseKijiRowData.
  * SCHEMA-485. Adds profiling pointcuts for HBase reads/writes.
  * SCHEMA-514. DeleteTool correctly formats the delete confirmation message
      when deleting all entries from a cell.

Version 1.2.0
  * SCHEMA-335, SCHEMA-489. Fix: FormattedEntityId and KijiTableLayout trigger
      NPE if RowKeyFormat2.salt is null. Omitted salt entries now default to a
      2-byte MD5-based hash prefix.
  * SCHEMA-474. KijiTable maintains a pool of HTable objects.
      Readers, writers, scanners and pagers borrow HTable objects from the pool.
  * SCHEMA-469. Fix: VersionInfo should recognize backward-compatibility
      requirements for instance versions.
  * SCHEMA-396. HBase KijiTable readers and writers can now receive table
      layout updates by subscribing to a LayoutConsumer list managed by the
      table. Registered readers and writers will recreate their layout dependent
      state in response to a table layout update.

Version 1.1.2
  * SCHEMA-358. Adds a withTable(TableLayoutDesc) method to
      InstanceBuilder.TableBuilder.
  * SCHEMA-475. Include support for profiling. Use the enable-profiling.sh
      script to switch to profiling-enabled KijiSchema (and KijiMR) jars.
  * SCHEMA-462. Include support for CDH 4.3.
  * SCHEMA-258. Fix: HBaseKijiTable.getRegions() closes the underlying HTable.
  * SCHEMA-415. KijiRandomRowFilter and KijiFirstKeyOnlyColumnFilter
  * SCHEMA-467. Fix: Upgrade checkin notification thread may hang.
  * SCHEMA-466. Fall back to $HADOOP_HOME/lib/native/ for native libraries.
      Correctly detect native libraries in CDH 4.2 and CDH 4.3 packaging.
  * SCHEMA-465. Fix: Can't create 256 regions on a table with 1 byte hash prefix
  * SCHEMA-459. Improve performance of ColumnId translation.
  * SCHEMA-456. HashedEntityId should throw an exception when getting
      row key components.

Version 1.1.1